force-app/main/default/objects/BMCServiceDesk__Custom_Action__c/BMCServiceDesk__Custom_Action__c.object-meta.xml
<CustomObject>
    <description>Object to store custom actions defined by administrators.</description>
    <label>Custom Action</label>
    <nameField>
        <displayFormat>Caption{00000000}</displayFormat>
        <label>Caption ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>