force-app/main/default/objects/BMCServiceDesk__Custom_Action__c/fields/BMCServiceDesk__ActionName__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ActionName__c</fullName>
    <inlineHelpText>Use this field to enter a unique alphanumeric identifier that you want to assign to the custom action.</inlineHelpText>
    <label>Action Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>