force-app/main/default/objects/BMCServiceDesk__Custom_Action__c/fields/BMCServiceDesk__Description__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Description__c</fullName>
    <inlineHelpText>Use this field to enter a description of the custom action. For example, you can create a custom action to open the Google website in a new browser window.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>