force-app/main/default/objects/BMCServiceDesk__Custom_Action__c/fields/BMCServiceDesk__DisplayAs__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__DisplayAs__c</fullName>
    <label>Display As</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Menu Item In Action Menu</fullName>
            </value>
            <value>
                <fullName>Icon Button on Toolbar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>