force-app/main/default/objects/BMCServiceDesk__Custom_Action__c/fields/BMCServiceDesk__Form__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Form__c</fullName>
    <inlineHelpText>From the list of options, select the form where this custom action is displayed as a menu command of the Actions menu.</inlineHelpText>
    <label>Form</label>
    <length>100</length>
    <type>Text</type>
</CustomField>