force-app/main/default/objects/BMCServiceDesk__Custom_Action__c/fields/BMCServiceDesk__LaunchIn__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__LaunchIn__c</fullName>
    <label>Launch In</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Remedyforce tab</fullName>
                <default>true</default>
                <label>Remedyforce tab</label>
            </value>
            <value>
                <fullName>Browser tab</fullName>
            </value>
            <value>
                <fullName>Browser window</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>