force-app/main/default/objects/BMCServiceDesk__Custom_Action__c/fields/BMCServiceDesk__LaunchUrl__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__LaunchUrl__c</fullName>
    <inlineHelpText>Use this field to enter URL of the external system or the Salesforce page that you want to access when you run this custom action.URL must begin with http:// or https://.</inlineHelpText>
    <label>Launch URL</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>