force-app/main/default/objects/BMCServiceDesk__Custom_Action__c/fields/BMCServiceDesk__Type__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Type__c</fullName>
    <description>This will identify that it is action or agent tool</description>
    <inlineHelpText>This will identify that it is action or agent tool</inlineHelpText>
    <label>Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>